--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,21 +1,17 @@
-h1 .jumbotron-heading{
 
-  background-image: url('../images/PromoBanner/BannerPromo.jpg');
-
-}
 
 
 :root {
   --jumbotron-padding-y: 3rem;
 }
 
-.jumbotron {
+/* .jumbotron {
   padding-top: var(--jumbotron-padding-y);
   padding-bottom: var(--jumbotron-padding-y);
   margin-bottom: 0;
   background-color: #fff;
-}
-@media (min-width: 768px) {
+} */
+/* @media (min-width: 768px) {
   .jumbotron {
     padding-top: calc(var(--jumbotron-padding-y) * 2);
     padding-bottom: calc(var(--jumbotron-padding-y) * 2);
@@ -32,15 +28,15 @@ h1 .jumbotron-heading{
 
 .jumbotron .container {
   max-width: 40rem;
-}
+} */
 
-footer {
+/* footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
 footer p {
   margin-bottom: .25rem;
-}
+} */
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+/* .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); } */
